--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-social-icons": "^6.25.0",
     "react-tooltip": "^5.30.0",
     "sanity": "^4.21.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
